Add link to capita selecta of SE

--- a/teaching.html
+++ b/teaching.html
@@ -93,7 +93,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Lecturer</h4>
                     <div class="table-responsive">
-                        <table class="table table-hover table-sm">
+                        <table class="table table-hover table-sm" style="cursor: pointer;">
                             <thead class="thead-light">
                                 <tr>
                                     <th>Course</th>
@@ -104,7 +104,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                <tr onclick="window.open('http://soft.vub.ac.be/~ddinucci/capita_selecta_se/', '_blank')">
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc in Computer Science</td>
                                     <td>Vrije Univeriteit Brussel</td>
