Add Mobileconf SRC 2019

--- a/services.html
+++ b/services.html
@@ -106,8 +106,8 @@
                         <p class="card-text text-justify small">
                             International Conference on Advances and Trends in Software Engineering (SOFTENG): 2019<br/>
                             International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2018<br/>
-                            IEEE International Conference on Software Maintainance and Evolution (ICSME) - Tool Demo Track: 2018<br/>
-                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018<br/>
+                            IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo Track: 2018<br/>
+                            IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018, 2019<br/>
                             International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018<br/>
                             Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018
                         </p>
