--- a/services.html
+++ b/services.html
@@ -128,6 +128,7 @@
                             Journal of King Saud University: Computer and Information Sciences - Elsevier<br/>
                             Journal of Software: Evolution and Process - Wiley<br/>
                             Journal of Systems and Software - Elsevier<br/>
+                            Scientific Programming - Hindawi<br/>
                             Software Quality Journal - Springer
                         </p>
                     </div>
