--- a/projects.html
+++ b/projects.html
@@ -94,6 +94,14 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
+                        <h4 class="card-title">SECO-ASSIST 2018-2021</h4>
+                        <p class="card-text text-justify small">Software ecosystems are the most promising avenue for organising the software needs of the digital era. Jointly funded by F.R.S.-FNRS and FWO-Vlaanderen, the four-year Excellence of Science Project SECO-ASSIST aims to realise a scientific breakthrough to nurture the ecosystems of the future, by providing novel software recommendation techniques that address the resilience, evolvability, heterogeneity, and social interaction. To achieve this the project partners will combine their expertise in social networks (UMONS), software testing (UAntwerpen), software reuse (VUB) and database evolution (UNamur).</p>
+                        <p class="card-text"><a href="https://secoassist.github.io/" target="_blank">Web site</a></p>
+                    </div>
+                </div>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
                         <h4 class="card-title">INTiMALS</h4>
                         <p class="card-text text-justify small">This project’s goal is to research and deploy novel pattern mining algorithms in an industrial prototype of an intelligent modernisation assistant for legacy software systems. The assistant pro-actively recommends software engineers source code modernisation actions by comparing their current development efforts with insights gained by treating source code repositories as data. The assistant draws its intelligence from continuously mining for previously unknown patterns in the current state and structure of the system’s source code (programming idioms, coding conventions, library usage protocols) and in changes made to this code (systematic edits, repetitive changes). The proposed modernisation actions appear increasingly informed as the recommendation assistant uncovers and refines more patterns in the code, version and change repositories it mines. The success of the modernisation assistant hinges on the quality of the pattern mining algorithms it incorporates and their ability to improve their results by learning from their interaction with the software engineers.</p>
                         <p class="card-text"><a href="http://soft.vub.ac.be/intimals/" target="_blank">Web site</a></p>
