--- a/services.html
+++ b/services.html
@@ -129,7 +129,8 @@
                             Journal of Software: Evolution and Process - Wiley<br/>
                             Journal of Systems and Software - Elsevier<br/>
                             Scientific Programming - Hindawi<br/>
-                            Software Quality Journal - Springer
+                            Software Quality Journal - Springer<br/>
+                            Transactions on Knowledge and Data Engineering - IEEE
                         </p>
                     </div>
                 </div>
