--- a/research.html
+++ b/research.html
@@ -92,12 +92,12 @@
 
                 <div class="card-deck mb-3">
 
-                    <div class="card">
+                    <!--<div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Bug Prediction</h5>
                             <p class="card-text">Allocating resources for the testing and the verification of all the parts of a large software system is a cost-prohibitive task. To alleviate this issue, prediction models able to identify portions of source code more prone to contain bugs have been the object of several studies.<br/> The main research topic is the definition of accurate prediction models that, on the one hand use a suitable set of predictors able to characterize the bug-proneness of code components, and on the other hand are able to use appropriate machine learning techniques to distinguish those components affected by bug.</p>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="card">
                         <div class="card-body">
