Split resume in cv and academic portfolio

--- a/services.html
+++ b/services.html
@@ -94,8 +94,9 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
-                            <a href="http://www.sesa.unisa.it/seschool/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat<br/>
-                            <a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat.
+                            <a href="http://www.sesa.unisa.it/seschool/" target="blank">14th International Summer School on Software Engineering</a>: Committee Member<br/>
+                            <a href="http://www.sesa.unisa.it/seschool/previousEditions/2017/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat<br/>
+                            <a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat
                         </p>
                     </div>
                 </div>
