--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
         <section class="resume-section p-3 p-lg-5 d-flex d-column">
             <div class="my-auto">
                 <h1 class="mb-5">Di Nucci Dario</h1>
-                <p class="mb-5 text-justify">I am a research fellow at the Software Languages Lab of the Vrije Universiteit Brussel in Belgium. I received the PhD in Management and Information Technology from the University of Salerno in 2018 advised by <a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>. My research interests are within the Software Engineering topic and include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.
-                    <br/> You can find my full Curriculum Vitae
-                    <a target="blank" href="Short Resume.pdf">here</a>.</p>
+                <p class="mb-5 text-justify">I am a research fellow at the Software Languages Lab of the Vrije Universiteit Brussel in Belgium. I received the PhD in Management and Information Technology from the University of Salerno in 2018 advised by <a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>. My research interests are within the Software Engineering topic and include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.<br/>
+                    <a target="blank" href="ShortCV.pdf">CV</a> - <a target="blank" href="AcademicPortfolio.pdf">Academic Portfolio</a></p>
 
                 <p class="mb-5 text-center">
                     <a href="http://www.vub.ac.be/" target="blank">
