Add new professional services

--- a/services.html
+++ b/services.html
@@ -103,14 +103,24 @@
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
+                        <h4 class="card-title">Editorial Board Member of International Journals</h4>
+                        <p class="card-text text-justify small">
+                            IEEE Software Blog: 2019 - Actual
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card card-horizontal mb-2">
+                    <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE) – Artefact Evaluation Track: 2019<br/>
                             International Conference on Advances and Trends in Software Engineering (SOFTENG): 2019<br/>
                             International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2018<br/>
                             IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo Track: 2018<br/>
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018, 2019<br/>
                             International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018<br/>
-                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018
+                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018, 2019
                         </p>
                     </div>
                 </div>
@@ -129,6 +139,7 @@
                             Journal of King Saud University: Computer and Information Sciences - Elsevier<br/>
                             Journal of Software: Evolution and Process - Wiley<br/>
                             Journal of Systems and Software - Elsevier<br/>
+                            Science of Computer Programming - Elsevier<br/>
                             Scientific Programming - Hindawi<br/>
                             Software Quality Journal - Springer<br/>
                             Transactions on Knowledge and Data Engineering - IEEE
@@ -140,7 +151,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Reviewer for International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            IEEE International Conference on Program Comprehension (ICPC): 2016, 2018<br/>
+                            IEEE International Conference on Program Comprehension (ICPC): 2016, 2018, 2019<br/>
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER): 2017, 2018<br/>
                             IEEE International Conference on Software Maintenance and Evolution (ICSME): 2016 (ERA Track), 2018<br/>
                             International Conference on Business Information Systems (BIS): 2015, 2016, 2017<br/>
