--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a class="nav-link js-scroll-trigger" href="research.html">Research Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
+                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="services.html">Professional Services</a>
@@ -89,12 +89,15 @@
         <section class="resume-section p-3 p-lg-5 d-flex d-column">
             <div class="my-auto">
                 <h1 class="mb-5">Di Nucci Dario</h1>
-                <p class="mb-5 text-justify">I am a research fellow at the Software Languages Lab of the Vrije Universiteit Brussel in Belgium. I received the PhD in Management and Information Technology from the University of Salerno in 2018 advised by <a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>. My research interests are within the Software Engineering topic and include software maintenance and evolution, software testing, search based software engineering, green mining, mining software repositories, and empirical software engineering.<br/>
-                    <a target="blank" href="ShortCV.pdf">CV</a> - <a target="blank" href="AcademicPortfolio.pdf">Academic Portfolio</a></p>
+                <p class="mb-5 text-justify">I am a research fellow at the <a href="http://soft.vub.ac.be/" target="_blank">Software Languages Lab</a> of the Vrije Universiteit Brussel in Belgium wit <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
+                    In 2018 I received the PhD in Management and Information Technology from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
+                    My research is on <i>empirical software engineering</i>, in particular <i></i>software maintenance and evolution</i> and <i></i>software testing</i>.<br/>
+                    To this aim, I apply several techniques such as machine learning, search-based algorithms, and static analysis of source code.<br/>
+                    <a target="_blank" href="ShortCV.pdf">CV</a> - <a target="_blank" href="AcademicPortfolio.pdf">Academic Portfolio</a></p>
 
                 <p class="mb-5 text-center">
-                    <a href="http://www.vub.ac.be/" target="blank">
-                        <img id="vub-logo" src="img/het-vub-logo.png" alt="" />
+                    <a href="http://soft.vub.ac.be/" target="_blank">
+                        <img id="vub-logo" src="img/soft-vub-full-pub.png" alt="" />
                     </a>
                     <br/> Software Languages Lab
                     <br/> Vrije Universiteit Brussel
