--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
                     <a class="nav-link js-scroll-trigger" href="research.html">Research Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
+                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="services.html">Professional Services</a>
@@ -88,9 +88,7 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex flex-column">
             <div class="my-auto">
-                <h2 class="mb-5">Projects</h2>
-
-                <h2 class="mb-2 mt-3">Current Projects</h2>
+                <h2 class="mb-2">Current Projects</h2>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
@@ -107,6 +105,16 @@
                         <p class="card-text"><a href="http://soft.vub.ac.be/intimals/" target="_blank">Web site</a></p>
                     </div>
                 </div>
+
+                <h2 class="mt-5 mb-2">Tools</h2>
+
+                <div class="card card-horizontal mb-2">
+                        <div class="card-body">
+                            <h4 class="card-title">SoCRATES</h4>
+                            <p class="card-text text-justify small">SoCRATES is an IntelliJ IDEA plugin to detect test smells in Scala/SBT projects. It automatically detects and reports on 6 test smells including 4 variants of General Fixture.<br/> SoCRATES is released under MIT license.</p>
+                            <p class="card-text"><a href="https://github.com/jonas-db/socrates" target="_blank">Web site</a></p>
+                        </div>
+                    </div>
 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
@@ -132,7 +140,7 @@
                     </div>
                 </div>
 
-                <h2 class="mb-2 mt-3">Past Projects</h2>
+                <h2 class="mt-5 mb-2">Tools on which I collaborated</h2>
                 
                 <div class="card card-horizontal mb-2">
                     <div class="card-body">
