--- a/teaching.html
+++ b/teaching.html
@@ -64,7 +64,7 @@
                     <a class="nav-link js-scroll-trigger" href="research.html">Research Interests</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects</a>
+                    <a class="nav-link js-scroll-trigger" href="projects.html">Projects & Tools</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="services.html">Professional Services</a>
