--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <h1 class="mb-5">Di Nucci Dario</h1>
                 <p class="mb-5 text-justify">I am a research fellow at the <a href="http://soft.vub.ac.be/" target="_blank">Software Languages Lab</a> of the Vrije Universiteit Brussel with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
                     In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
-                    My research is on <i>empirical software engineering</i>, in particular <i></i>software maintenance and evolution</i> and <i></i>software testing</i>.<br/>
-                    To this aim, I apply several techniques such as machine learning, search-based algorithms, and static analysis of source code.<br/>
+                    My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
+                    To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>static analysis</i> of source code.<br/>
                     <a target="_blank" href="ShortCV.pdf">CV</a> - <a target="_blank" href="AcademicPortfolio.pdf">Academic Portfolio</a></p>
 
                 <p class="mb-5 text-center">
