Update landfill website

--- a/projects.html
+++ b/projects.html
@@ -136,7 +136,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Landfill</h4>
                         <p class="card-text text-justify small">Landfill is a Web-based platform for sharing code smell datasets. It also provides a set of APIs for programmatically accessing its data. Anyone can contribute by: improving existing datasets or sharing and posting new datasets.</p>
-                        <p class="card-text"><a href="http://www.sesa.unisa.it/landfill/" target="_blank">Web site</a></p>
+                        <p class="card-text"><a href="http://soft.vub.ac.be/landfill/" target="_blank">Web site</a></p>
                     </div>
                 </div>
 
