--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
                     My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
                     To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>static analysis</i> of source code.<br/>
-                    <a target="_blank" href="ShortCV.pdf">CV</a> - <a target="_blank" href="AcademicPortfolio.pdf">Academic Portfolio</a></p>
+                    <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
 
                 <p class="mb-5 text-center">
                     <a href="http://soft.vub.ac.be/" target="_blank">
