--- a/teaching.html
+++ b/teaching.html
@@ -107,7 +107,7 @@
                                 <tr onclick="window.open('http://soft.vub.ac.be/~ddinucci/capita_selecta_se/', '_blank')">
                                     <td>Capita Selecta of Software Engineering</td>
                                     <td>MSc</td>
-                                    <td>Vrije Univeriteit Brussel</td>
+                                    <td>Vrije Universiteit Brussel</td>
                                     <td>2018/19 (yearly course)<br/> </td>
                                     <td><i>taught with <a href="http://soft.vub.ac.be/~cderoove/" target="blank">Prof. Coen De Roover</a></i></td>
                                 </tr>
@@ -135,42 +135,42 @@
                                         <tr>
                                             <td>Programming I</td>
                                             <td>BSc</td>
-                                            <td>Università degli Studi di Salerno</td>
+                                            <td>University of Salerno</td>
                                             <td><a href="https://docenti.unisa.it/004532/en/home" target="blank">Prof. Riccardo Distasi</a></td>
                                             <td>2016/17 (Fall Semester)</td>
                                         </tr>
                                         <tr>
                                             <td>Programming I</td>
                                             <td>BSc</td>
-                                            <td>Università degli Studi di Salerno</td>
+                                            <td>University of Salerno</td>
                                             <td><a href="https://docenti.unisa.it/000263/en/curriculum" target="blank">Prof. Enrico Fischetti</a></td>
                                             <td>2015/16 (Fall Semester) <br/> 2015/16 (Spring Semester)</td>
                                         </tr>
                                         <tr>
                                             <td>Software Engineering, Management and Evolution</td>
                                             <td>MSc</td>
-                                            <td>Università degli Studi di Salerno</td>
+                                            <td>University of Salerno/td>
                                             <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
                                             <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
                                         </tr>
                                         <tr>
                                             <td>Software Engineering: Maintenance and Testing</td>
                                             <td>MSc</td>
-                                            <td>Università degli Studi di Salerno</td>
+                                            <td>University of Salerno</td>
                                             <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
                                             <td>2015/16 (Fall Semester)</td>
                                         </tr>
                                         <tr>
                                             <td>Software Engineering</td>
                                             <td>BSc</td>
-                                            <td>Università degli Studi di Salerno</td>
+                                            <td>University of Salerno</td>
                                             <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
                                             <td>2015/16 (Fall Semester) <br/> 2016/17 (Fall Semester)</td>
                                         </tr>
                                         <tr>
                                             <td>Web Development</td>
                                             <td>BSc</td>
-                                            <td>Università degli Studi di Salerno</td>
+                                            <td>University of Salerno</td>
                                             <td>-</td>
                                             <td>2016/17 (Fall Semester)</td>
                                         </tr>
