--- a/teaching.html
+++ b/teaching.html
@@ -149,7 +149,7 @@
                                         <tr>
                                             <td>Software Engineering, Management and Evolution</td>
                                             <td>MSc</td>
-                                            <td>University of Salerno/td>
+                                            <td>University of Salerno</td>
                                             <td><a href="https://docenti.unisa.it/003241/en/home" target="blank">Prof. Andrea De Lucia</a></td>
                                             <td>2015/16 (Spring Semester) <br/> 2016/17 (Spring Semester)</td>
                                         </tr>
