--- a/services.html
+++ b/services.html
@@ -111,13 +111,13 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
-                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE) – Artefact Evaluation Track: 2019<br/>
-                            International Conference on Advances and Trends in Software Engineering (SOFTENG): 2019<br/>
-                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2018<br/>
+                            ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE) – Artifact Evaluation Track: 2019<br/>
                             IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo Track: 2018, 2019<br/>
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018, 2019<br/>
-                            International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018<br/>
-                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018, 2019
+                            International Conference on Advances and Trends in Software Engineering (SOFTENG): 2019<br/>
+                            International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2018, 2019<br/>
+                            Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018, 2019<br/>
+                            International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018
                         </p>
                     </div>
                 </div>
