--- a/services.html
+++ b/services.html
@@ -114,10 +114,8 @@
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE) – Artifact Evaluation Track: 2019<br/>
                             IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo Track: 2018, 2019<br/>
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018, 2019<br/>
-                            International Conference on Advances and Trends in Software Engineering (SOFTENG): 2019<br/>
                             International Workshop on Cloud-Native Applications Design and Experience (CNAX): 2018, 2019<br/>
                             Workshop on Machine Learning Techniques for Software Quality Evaluation (MaLTeSQuE): 2018, 2019<br/>
-                            International Conference on Advances in System Testing and Validation Lifecycle (VALID): 2017, 2018
                         </p>
                     </div>
                 </div>
@@ -127,21 +125,19 @@
                         <h4 class="card-title">Reviewer for International Journals</h4>
                         <p class="card-text text-justify small">
                             Advances in Software Engineering - Elsevier<br/>
-                            Arabian Journal for Science and Engineering - Springer<br/>
                             Computational Intelligence - Wiley<br/>
                             Empirical Software Engineering - Springer<br/>
                             IEEE Access - IEEE<br/>
                             IET Software - Institution of Engineering and Technology<br/>
                             Information Processing Letters - Elsevier<br/>
-                            Journal of King Saud University: Computer and Information Sciences - Elsevier<br/>
                             Journal of Software: Evolution and Process - Wiley<br/>
                             Journal of Systems and Software - Elsevier<br/>
                             Neurocomputing - Elsevier<br/>
                             Science of Computer Programming - Elsevier<br/>
-                            Scientific Programming - Hindawi<br/>
                             Software Quality Journal - Springer<br/>
                             Transactions on Knowledge and Data Engineering - IEEE<br/>
-                            Transactions on Reliability - IEEE
+                            Transactions on Reliability - IEEE<br/>
+                            Transactions on Software Engineering - IEEE
                         </p>
                     </div>
                 </div>
