--- a/services.html
+++ b/services.html
@@ -111,6 +111,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) – Research Track: 2020<br/>
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE) – Artifact Evaluation Track: 2019<br/>
                             IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo Track: 2018, 2019<br/>
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018, 2019<br/>
@@ -159,6 +160,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Invited Talks</h4>
                         <p class="card-text text-justify small">
+                            Mining Source Code^3: Mining Idioms, Usages and Edits.
+                            FOSDEM, Brussels, Belgium, February 3rd 2019<br/>
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, March 9th 2018<br/>
                             Defect Prediction: using Machine Learning for focusing the Testing Effort. Jheronimus Academy of Data Science, 's-Hertogenbosch, The Netherlands, December 5th 2017<br/>
                             Diagnose and Detect Energy Flaws of Android Apps. Vrije Universiteit Brussel, Brussels, Belgium, March 23rd 2017
