--- a/index.html
+++ b/index.html
@@ -86,14 +86,18 @@
         <section class="resume-section p-3 p-lg-5 d-flex d-column">
             <div class="my-auto">
                 <div class="row">
-                    <h1 class="mb-5">Di Nucci Dario</h1>
+                    <div class="col-sm-12">
+                        <h1 class="mb-5">Di Nucci Dario</h1>
+                    </div>
                 </div>
                 <div class="row">
-                    <p class="mb-5 text-justify">I am a research fellow at the <a href="http://soft.vub.ac.be/" target="_blank">Software Languages Lab</a> of the Vrije Universiteit Brussel with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
-                    In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
-                    My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
-                    To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>static analysis</i> of source code.<br/>
-                    <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
+                    <div class="col-sm-12">
+                        <p class="mb-5 text-justify">I am a research fellow at the <a href="http://soft.vub.ac.be/" target="_blank">Software Languages Lab</a> of the Vrije Universiteit Brussel with <a href="http://soft.vub.ac.be/~cderoove/" target="_blank">Prof. Coen De Roover</a>.<br/>
+                        In 2018 I received a PhD from the University of Salerno advised by <a href="https://docenti.unisa.it/003241/en/home" target="_blank"> Prof. Andrea De Lucia</a> with a thesis entitled <i>Methods and Tools for Focusing and Prioritizing the Testing Effort</i>.<br/>
+                        My research is on <i>empirical software engineering</i>, in particular <i>software maintenance and evolution</i> and <i>software testing</i>.<br/>
+                        To this aim, I apply several techniques such as <i>machine learning</i>, <i>search-based algorithms</i>, and <i>static analysis</i> of source code.<br/>
+                        <a target="_blank" href="FullCV.pdf">Full Curriculum Vitae</a></p>
+                    </div>
                 </div>
             
                 <div class="row">
