--- a/services.html
+++ b/services.html
@@ -91,6 +91,8 @@
                     <div class="card-body">
                         <h4 class="card-title">Organizing Committee Member of SE events</h4>
                         <p class="card-text text-justify small">
+                            <a href="https://2020.programming-conference.org/home/eniac-2020" target="blank">1st International Workshop on ENgineering Intelligent Applications' Code</a>: Program Chair<br/>
+                            <a href="http://soft.vub.ac.be/benevol2019/" target="blank">18th Belgium-Netherlands Software Evolution Workshop</a>: Organizer<br/>
                             <a href="http://www.sesa.unisa.it/seschool/" target="blank">14th International Summer School on Software Engineering</a>: Committee Member<br/>
                             <a href="http://www.sesa.unisa.it/seschool/previousEditions/2017/" target="blank">13th International Summer School on Software Engineering</a>: Scientific Secretariat<br/>
                             <a href="http://www.sesa.unisa.it/seschool/previousEditions/2016/" target="blank">12th International Summer School on Software Engineering</a>: Scientific Secretariat
@@ -112,6 +114,8 @@
                         <h4 class="card-title">Program Committee Member of International Conferences and Workshops</h4>
                         <p class="card-text text-justify small">
                             IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) – Research Track: 2020<br/>
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) – Tool Demo Track: 2020<br/>
+                            IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) – Journal First Track: 2020<br/>
                             ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (ESEC/FSE) – Artifact Evaluation Track: 2019<br/>
                             IEEE International Conference on Software Maintenance and Evolution (ICSME) - Tool Demo Track: 2018, 2019<br/>
                             IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft) – Student Research Competition: 2018, 2019<br/>
@@ -137,7 +141,8 @@
                             Science of Computer Programming - Elsevier<br/>
                             Software Quality Journal - Springer<br/>
                             Transactions on Knowledge and Data Engineering - IEEE<br/>
-                            Transactions on Software Engineering - IEEE
+                            Transactions on Software Engineering - IEEE<br/>
+                            Transactions on Software Engineering and Methodology - ACM
                         </p>
                     </div>
                 </div>
